# portfolio

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
cmake/: CrossCompiling.cmake
dependencies/imgui_glfw_bindings/: imgui_impl_glfw.cpp
html/: index.html
include/WebApp/: application.hpp  window.hpp
include/WebApp/content/: common.hpp
include/WebApp/gui/: icon.hpp  manager.hpp
include/WebApp/gui/page/: about.hpp  base.hpp  home.hpp  listing.hpp  name.hpp  projects.hpp  standard.hpp
include/WebApp/gui/page/project/: asteroids.hpp  base.hpp  breadboard_computer.hpp  clarity.hpp  hand.hpp  haptic_grasping.hpp  path_bench.hpp  portfolio.hpp  ruined_kingdoms.hpp
include/WebApp/gui/util/: imgui.hpp  js.hpp
include/WebApp/gui/widget/: filterer.hpp  icon_btn.hpp  link.hpp  network_icons.hpp  radio.hpp  search_bar.hpp  text.hpp
include/WebApp/gui/window/: base.hpp
script/: actions.py  compile.py  configure.py  run.py
scripts/: actions.sh
src/: application.cpp  main.cpp  window.cpp
src/content/: common.cpp
src/gui/: icon.cpp  manager.cpp
src/gui/page/: about.cpp  base.cpp  home.cpp  listing.cpp  projects.cpp  standard.cpp
src/gui/page/project/: asteroids.cpp  base.cpp  breadboard_computer.cpp  clarity.cpp  hand.cpp  haptic_grasping.cpp  path_bench.cpp  portfolio.cpp  ruined_kingdoms.cpp
src/gui/util/: imgui.cpp  js.cpp
src/gui/widget/: filterer.cpp  icon_btn.cpp  link.cpp  network_icons.cpp  radio.cpp  search_bar.cpp  text.cpp
src/gui/window/: base.cpp
